--- a/.github/workflows/update-combined.yml
+++ b/.github/workflows/update-combined.yml
@@ -1,38 +1,30 @@
-name: Update Combined Value
+name: Update combined.txt daily
 
 on:
   schedule:
-    - cron: '0 6 * * *' # هر روز ساعت 6 صبح UTC
-  workflow_dispatch: # برای اجرای دستی
+    - cron: '0 6 * * *'  # هر روز ساعت ۶ صبح UTC (ساعت ۱۰:۳۰ صبح ایران)
+  workflow_dispatch:      # امکان اجرای دستی
 
 jobs:
-  build:
+  update:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
+    - name: Fetch combined value from site
+      run: |
+        COMBINED=$(curl -s https://alighadrboland.github.io/Gold-Porfolio/combined.txt)
+        echo "Latest combined value: $COMBINED"
+        echo "$COMBINED" > combined.txt
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Calculate combined and write to file
-        run: |
-          node -e "
-          const fs = require('fs');
-          const data = JSON.parse(fs.readFileSync('data.json'));
-          const combined = data.totalGoldValue + data.result + data.totalIrt;
-          fs.writeFileSync('combined.txt', Math.floor(combined).toString());
-          "
-
-      - name: Commit and push combined.txt
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@users.noreply.github.com"
-          git add combined.txt
-          git commit -m 'Update combined.txt' || echo "No changes"
-          git push
+    - name: Commit and push changes
+      env:
+        TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        git config user.name "github-actions"
+        git config user.email "github-actions@users.noreply.github.com"
+        git add combined.txt
+        git commit -m "Update combined.txt" || echo "No changes to commit"
+        git push https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git HEAD:main
