--- a/.github/workflows/daily-log.yml
+++ b/.github/workflows/daily-log.yml
@@ -2,8 +2,11 @@ name: Daily Combined Logger
 
 on:
   schedule:
-    - cron: '0 5 * * *'  # هر روز ساعت ۵ صبح UTC
+    - cron: '0 5 * * *'
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   log_combined:
@@ -12,6 +15,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # تا git بتواند به درستی روی شاخه اصلی کار کند
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -27,4 +32,4 @@ jobs:
           git config --global user.email 'actions@github.com'
           git add log.csv
           git commit -m "📊 Add combined value for $(date +'%Y-%m-%d')" || echo "No changes to commit"
-          git push
+          git push origin HEAD:main
