--- a/.github/workflows/daily-log.yml
+++ b/.github/workflows/daily-log.yml
@@ -1,40 +1,36 @@
-name: Daily Combined Logger
+const https = require('https');
+const fs = require('fs');
 
-on:
-  schedule:
-    - cron: '0 5 * * *'
-  workflow_dispatch:
+const url = 'https://raw.githubusercontent.com/alighadrboland/Gold-Porfolio/main/index.html';
 
-permissions:
-  contents: write
+https.get(url, res => {
+  let data = '';
+  res.on('data', chunk => (data += chunk));
+  res.on('end', () => {
+    const match = data.match(/combined\s*=\s*([\d.]+)/i);
+    if (match) {
+      const combined = match[1];
+      const now = new Date().toISOString().slice(0, 10);
+      const row = `${now},${combined}\n`;
 
-jobs:
-  log_combined:
-    runs-on: ubuntu-latest
+      const file = 'log.csv';
+      if (!fs.existsSync(file)) {
+        fs.writeFileSync(file, 'date,combined\n');
+      }
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Run log-value.js
-        run: node log-value.js
-
-      - name: Commit and push changes
-        run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'actions@github.com'
-          git add log.csv
-
-          if git diff --cached --quiet; then
-            echo "⏩ No changes to commit."
-          else
-            git commit -m "📊 Add combined value for $(date +'%Y-%m-%d')"
-            git push origin HEAD:main
-          fi
+      const currentData = fs.readFileSync(file, 'utf8');
+      if (!currentData.includes(now)) {
+        fs.appendFileSync(file, row);
+        console.log(`✅ Logged: ${row}`);
+      } else {
+        console.log(`ℹ️ Already logged for ${now}`);
+      }
+    } else {
+      console.error('❌ Could not find combined value in HTML');
+      process.exit(1);
+    }
+  });
+}).on('error', err => {
+  console.error('❌ Error fetching data:', err.message);
+  process.exit(1);
+});
