--- a/.github/workflows/daily-log.yml
+++ b/.github/workflows/daily-log.yml
@@ -1,38 +1,33 @@
-const https = require('https');
-const fs = require('fs');
-const cheerio = require('cheerio');
+name: Daily Log
 
-const url = 'https://alighadrboland.github.io/Gold-Porfolio/';
+on:
+  schedule:
+    - cron: '0 6 * * *'  # ساعت 6 صبح UTC
+  workflow_dispatch:     # برای اجرای دستی هم فعال است
 
-https.get(url, res => {
-  let data = '';
-  res.on('data', chunk => (data += chunk));
-  res.on('end', () => {
-    const $ = cheerio.load(data);
-    const combined = $('#combined-value').text().trim();
+jobs:
+  log-value:
+    runs-on: ubuntu-latest
 
-    if (combined) {
-      const now = new Date().toISOString().slice(0, 10);
-      const row = `${now},${combined}\n`;
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      const file = 'log.csv';
-      if (!fs.existsSync(file)) {
-        fs.writeFileSync(file, 'date,combined\n');
-      }
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
-      const currentData = fs.readFileSync(file, 'utf8');
-      if (!currentData.includes(now)) {
-        fs.appendFileSync(file, row);
-        console.log(`✅ Logged: ${row}`);
-      } else {
-        console.log(`ℹ️ Already logged for ${now}`);
-      }
-    } else {
-      console.error('❌ Could not find combined value in HTML');
-      process.exit(1);
-    }
-  });
-}).on('error', err => {
-  console.error('❌ Error fetching data:', err.message);
-  process.exit(1);
-});
+      - name: Install cheerio
+        run: npm install cheerio
+
+      - name: Run script
+        run: node daily-log.js
+
+      - name: Commit and push changes
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add log.csv
+          git commit -m "📊 Log daily combined value [bot]" || echo "No changes to commit"
+          git push
